# app/Http/Requests/EventRequest/IndexEventRequest.php
@@ -27,8 +27,6 @@ class IndexEventRequest extends IndexRequest
             'name'           => 'nullable|string|max:255',
             'event_datetime' => 'nullable|date',            // Debe ser una fecha válida
             'comment'        => 'nullable|string|max:1000', // Permitir comentarios opcionales
-            'nro_reservas'   => 'nullable|integer|min:0',   // Número de reservas, no negativo
-            'nro_boxes'      => 'nullable|integer|min:0',   // Número de boxes, no negativo
             'status'         => 'nullable|string',
             'user_id'        => 'nullable|string',
 
