# app/Http/Requests/EventRequest/StoreEventRequest.php
@@ -21,8 +21,6 @@ class StoreEventRequest extends StoreRequest
             'name'           => 'required|string|max:255',
             'event_datetime' => 'required|date',            // Debe ser una fecha válida
             'comment'        => 'nullable|string|max:1000', // Permitir comentarios opcionales
-            'nro_reservas'   => 'nullable|integer|min:0',   // Número de reservas, no negativo
-            'nro_boxes'      => 'nullable|integer|min:0',   // Número de boxes, no negativo
             'status'         => 'nullable|string',          // Asegurar que sea true o false
         ];
     }
@@ -42,11 +40,7 @@ class StoreEventRequest extends StoreRequest
             'comment.string'          => 'El comentario debe ser una cadena de texto.',
             'comment.max'             => 'El comentario no puede tener más de 1000 caracteres.',
 
-            'nro_reservas.integer'    => 'El número de reservas debe ser un número entero.',
-            'nro_reservas.min'        => 'El número de reservas no puede ser negativo.',
-
-            'nro_boxes.integer'       => 'El número de boxes debe ser un número entero.',
-            'nro_boxes.min'           => 'El número de boxes no puede ser negativo.',
+         
 
             'status.string'           => 'El estado debe ser una cadena.',
 
